force-app/main/default/objects/Investment_Profile_Form__c/Investment_Profile_Form__c.object-meta.xml
<CustomObject>
    <description>This is the form to be fullfiled by account clients in order to define their investment profile</description>
    <label>Investment Profile Form</label>
    <nameField>
        <displayFormat>INVPF-{00000}</displayFormat>
        <label>Investment Profile Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Profile Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>