force-app/main/default/objects/Investment_Profile_Form__c/fields/A_frase_que_melhor_o_descreve__c.field-meta.xml
<CustomField>
    <fullName>A_frase_que_melhor_o_descreve__c</fullName>
    <description>1. Selecione a frase que melhor o descreve na hora de escolher um investimento:
Sigo o conselho de alguém que conheça mais o mercado que eu e seja da minha confiança para conseguir lucros acima de média. (M)
Busco primeiro segurança, pensando no longo prazo, mesmo abrindo mão de um pouco de rentabilidade. (C)
Me sinto confortável em investir, pois conheço bem o mercado. (A)</description>
    <label>A frase que melhor o descreve</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sigo o conselho de alguém que conheça mais o mercado que eu e seja da minha confiança para conseguir lucros acima de média</fullName>
            </value>
            <value>
                <fullName>Busco primeiro segurança, pensando no longo prazo, mesmo abrindo mão de um pouco de rentabilidade.</fullName>
                <label>Busco primeiro segurança, pensando no longo prazo, mesmo abrindo mão de um pouco de rentabilidade</label>
            </value>
            <value>
                <fullName>Me sinto confortável em investir, pois conheço bem o mercado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>