force-app/main/default/objects/Investment_Profile_Form__c/fields/Atitude_nas_oscilacoes__c.field-meta.xml
<CustomField>
    <fullName>Atitude_nas_oscilacoes__c</fullName>
    <label>Atitude nas oscilações</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venderia imediatamente</fullName>
            </value>
            <value>
                <fullName>Entendo que estou exposto a este risco para determinados ativos, mas não para todo o meu patrimônio</fullName>
            </value>
            <value>
                <fullName>Entendo que meu patrimônio está sujeito a flutuações dessa magnitude e não estão 100% protegido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>