force-app/main/default/objects/Investment_Profile_Form__c/fields/Experiencia_com_investimentos__c.field-meta.xml
<CustomField>
    <fullName>Experiencia_com_investimentos__c</fullName>
    <label>Experiência com investimentos</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nenhuma</fullName>
            </value>
            <value>
                <fullName>Possuo conhecimento e experiência no mercado de renda fixa e fundos</fullName>
            </value>
            <value>
                <fullName>Possuo algum conhecimento no mercado de renda variável e de derivativos</fullName>
            </value>
            <value>
                <fullName>Possuo ampla experiência no mercado de renda variável e de derivativos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>