force-app/main/default/objects/Investment_Profile_Form__c/fields/Investimentos_Realizados__c.field-meta.xml
<CustomField>
    <fullName>Investimentos_Realizados__c</fullName>
    <label>Investimentos Realizados</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nunca investi</fullName>
            </value>
            <value>
                <fullName>Poupança</fullName>
            </value>
            <value>
                <fullName>Previdência privada</fullName>
            </value>
            <value>
                <fullName>Titulos de RF</fullName>
            </value>
            <value>
                <fullName>Fundos de investimento</fullName>
            </value>
            <value>
                <fullName>Bolsa de Valores e derivativos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>