force-app/main/default/objects/Investment_Profile_Form__c/fields/O_que_voce_prioriza_na_hora_de_investir__c.field-meta.xml
<CustomField>
    <fullName>O_que_voce_prioriza_na_hora_de_investir__c</fullName>
    <label>O que você prioriza na hora de investir</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grandes lucros a curto prazo</fullName>
            </value>
            <value>
                <fullName>Rentabilidade e Diversificação</fullName>
            </value>
            <value>
                <fullName>Segurança e Tranquilidade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>