force-app/main/default/objects/Investment_Profile_Form__c/fields/Quando_vai_usar_os_recursos__c.field-meta.xml
<CustomField>
    <fullName>Quando_vai_usar_os_recursos__c</fullName>
    <label>Quando vai usar os recursos</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nos próximos 6 meses</fullName>
            </value>
            <value>
                <fullName>Nos próximos 12 meses</fullName>
            </value>
            <value>
                <fullName>Não tenho necessidade de utilizar os recursos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>