force-app/main/default/objects/Investment_Profile_Form__c/fields/Tempo_no_Investimento__c.field-meta.xml
<CustomField>
    <fullName>Tempo_no_Investimento__c</fullName>
    <label>Tempo no Investimento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menos de 1 ano</fullName>
            </value>
            <value>
                <fullName>de 1 a 3 anos</fullName>
            </value>
            <value>
                <fullName>de 3 a 5 anos</fullName>
            </value>
            <value>
                <fullName>acima de 5 anos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>